--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<div class="yes">
-			<h2>YEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEY!! THANKS LOVE! </h2>
+			<h2>YEEEEEEEEEEEEEEEY!! THANKS LOVE! </h2>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGMFiMZcY0OuKBIzuBiG4VRVvPxyUXNXIrStnvZUzmCA&s"
 				alt="">
 			<h4>Well puro kasi ganto nakikita ko sa tiktok or any social media platform, baka nag wwait kalang saken na mag ask din ako sayo <br>
